--- a/ko/Root.po
+++ b/ko/Root.po
@@ -6810,7 +6810,7 @@ msgid ""
 "Platinum Band, which maintains relatively small centers of worship in Oppara "
 "and Absalom."
 msgstr ""
-"길을 이끄는 자, 압수는 존재하는 크리처 중에 가장 강력하고 나이가 많기로 손에 꼬힙니다. 용의 전승에 따르면, 그와 그의 짝, "
+"길을 이끄는 자, 압수는 존재하는 크리처 중에 가장 강력하고 나이가 많기로 손에 꼽힙니다. 용의 전승에 따르면, 그와 그의 짝, "
 "티아매트가 세계를 창조한 용신들을 낳았다고 합니다. 압수는 모든 선한 드래곤과 금속 드래곤들의 수호신입니다. 그는 거의 모든 드래곤들을 "
 "자기 자식처럼 아끼는 아버지와 같은 존재로 전해집니다. 그는 로바거그에 맞서 모든 존재를 지키기 위한 싸움에 나선 신성한 크리처 중 "
 "하나입니다.\n"
