--- a/ko/General.po
+++ b/ko/General.po
@@ -8720,7 +8720,7 @@ msgid ""
 msgstr ""
 "\"통치자가 관심을 기울여야 하는 이슈에는 두가지 종류가 있습니다: 지루한 것들과 재미있는 것들이 있지요: 다행인건, 당신에겐 모든 "
 "지루한 문제를 다뤄줄 보좌관들이 있다는 겁니다!\" \n"
-"- 란더 레베다"
+"- 랜더 레베다"
 
 #. Mechanics/Blueprints/LoadingScreenHints/LoadingScreenHints_Hints.Array.data[19]_String
 msgctxt "7007d3b4-383d-4f75-b596-aeb9cbaef5ef"
@@ -9274,7 +9274,7 @@ msgstr "소울 이터는 피해자의 이름을 알면 더욱 위험해집니다
 #. Mechanics/Blueprints/LoadingScreenHints/LoadingScreenHints_Hints.Array.data[7]_String
 msgctxt "d2f90273-902f-4bca-ac5c-ea02b43e080f"
 msgid "Press \"Space\" to skip dialogue or banter when the party makes camp."
-msgstr "야영지에서 대화나 잡답을 건너뛰려면 \"스페이스\"를 누르세요."
+msgstr "야영지에서 대화나 잡담을 건너뛰려면 \"스페이스\"를 누르세요."
 
 #. Mechanics/Blueprints/LoadingScreenHints/LoadingScreenHints_Hints.Array.data[80]_String
 msgctxt "0007395a-74c1-4350-bff0-e85a41777e79"
