--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -5925,7 +5925,7 @@ msgid ""
 "over 250 pounds, while their cubs are approximately 1 foot tall and weigh no "
 "more than 15 pounds."
 msgstr ""
-"강하고 장엄한 듀오머고양이들은 태초 세계를 배회하며 작은 동물을 잡아먹고 살며, 그보다 더 열정적으로 새롭거나 낮선 마법의 원천을 "
+"강하고 장엄한 듀오머고양이들은 태초 세계를 배회하며 작은 동물을 잡아먹고 살며, 그보다 더 열정적으로 새롭거나 낯선 마법의 원천을 "
 "사냥합니다. 피와 살만큼이나 정렬된 비전 회오리들로 구성된 존재로서, 이 변덕스러운 고양이과 동물은 그들의 고향 영역에 깔린 무형의 맥을 "
 "따라 그 신비한 힘을 빛을 받아들이는 식물들처럼 흡수하며 번성했습니다. 심지어 그들의 마법에 대한 갈망과, 현실의 재구성을 향해 근접하여 "
 "얻는 행복보다 더 강력한 것은, 끝없이 태초세계와 그 너머를 향해 나아가도록 하는 듀오머고양이의 종족적인 호기심입니다.\n"
