--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -7015,7 +7015,7 @@ msgid ""
 "of the standard formations, for example, the triangle formation, or you can "
 "create your own."
 msgstr ""
-"좋은 진형은 전투의 절반을 차지합니다. 진형 시스템은 전투의 진형을 유지하는게 도움을 줄껍니다. 진형 창은 "
+"좋은 진형은 전투의 절반을 차지합니다. 진형 시스템은 전투의 진형을 유지하는게 도움을 줄 겁니다. 진형 창은 "
 "{console_bind|RightBottom}을 누르고 <b>진형</b>을 선택하는 것으로 열 수 있습니다. 여기서 삼각 진형과 같은 "
 "기본 진형들을 선택하 ㄹ수 있고 자신만의 진형을 구축할 수 있습니다."
 
@@ -7414,7 +7414,7 @@ msgstr ""
 "되기도 합니다. 두 명의 노움이 서로 마주칠 때, 그들은 그들의 믿음과 전통이 아무리 다를지라도, 일반적으로 상호 이익이 되는 어떠한 "
 "결과에 도달할 수 있도록 노력합니다. 비록 이것이 사실이 아닌 것으로 밝혀지더라도, 그들은 계속해서 서로를 상대하는 데 있어 공통점을 "
 "찾고 있습니다. 다른 인종들의 구성원들이 노움을 상대할 때 위와 같은 노력을 하지 않는 것은 관계를 형성하려는 노움들에게 좌절감을 주기도 "
-"하고 혼란스러운 일일껍니다.\n"
+"하고 혼란스러운 일일 겁니다.\n"
 "여러면에서, 다른 종족이 그들과 관계를 맺기 어려운 이유는 노움의 넓고 광대한 범위의, 분명치 않고 연결성이 없는 생각이 노움에게는 "
 "정상이기 때문입니다. 예를 들어, 노움의 유머는 종종 신체적인 장난, 비논리적인 운율 별명, 그리고 모든 신뢰감이 0에 가까운 터무니없는 "
 "거짓말을 다른 사람들에게 납득시키기 위한 노력에 초점을 맞추고 있습니다. 이러한 유~머는 노움들에겐 히스테리적으로 웃기지만, 다른 "
