오타 수정, 어색한 문구 수정
- 덥친 -> 덮친

--- a/ko/Items.po
+++ b/ko/Items.po
@@ -9775,7 +9775,7 @@ msgstr ""
 "솔직히 말해서, 새 남작의 업적은 아직 꽤 미적지근하다. 일단 내 편지가 제시간에 도착하지 못했다. 배달부가 살아있길 바랄 뿐이다. "
 "아무도 나를 마중나오지 않았기에, 혼자 수도에 가기로 했다. 그게 패착이었다. 도로 사정은 우편 업무보다 상황이 더 좋지 않았다. 나는 "
 "강기슭에 빠져서 바람에 날리는 나무들과 진흙을 헤치며 겨우겨우 나아갔다. 나를 간신히 버티게 해준 것은 \"다리\"라고 불리는 엄청난 "
-"과학적 경이의 존재를 듣고 남작이 지을 기쁨의 표정 뿐이었다. 엎친 데 덥친 격으로 배고픈 코볼트 무리가 덤불에서 튀어나왔다. 내가 "
+"과학적 경이의 존재를 듣고 남작이 지을 기쁨의 표정 뿐이었다. 엎친 데 덮친 격으로 배고픈 코볼트 무리가 덤불에서 튀어나왔다. 내가 "
 "이승에 작별의 입맞춤을 준비를 하고 있을 때, 때마침 남작 본인이 숲에서 나타나 이 해충들을 물리치고, 단단한 땅을 밟을 수 있도록 "
 "해주었다.\n"
 "이와 같이 남작은 도로와 다리를 방치할 수 있는 강력한 명분을 가지고 있다. 수도가 건설되고 있는 동안, 그는 도로 위에서 살다시피 "
