--- a/ko/World.po
+++ b/ko/World.po
@@ -2503,7 +2503,7 @@ msgid ""
 "goblin hero and expects great accomplishments from our alliance. I dare not "
 "think what he means by that."
 msgstr ""
-"머리 달린 친구라면 우리 대장한테 끌리는 건 알겠는데, 이번에 들어온 녹녹이라는 고블린 녀석은 아무래도 똘똘한 것 같진 않다니까요. "
+"머리 달린 친구라면 우리 대장한테 끌리는 건 알겠는데, 이번에 들어온 녹-녹이라는 고블린 녀석은 아무래도 똘똘한 것 같진 않다니까요. "
 "잽싸고, 영악하고, 고블린 기준에서는 우리한테 잘 해주는 편이에요. 자기가 아주 고블린 영웅인 줄 아는데 우리랑 같이 대단한 업적을 "
 "남기고 싶다나 봐요. 무슨 뜻으로 하는 말인지는 상상도 하기 싫지만요."
 
@@ -2521,7 +2521,7 @@ msgid ""
 "{mf|barony|barony|kingdom|kingdom}.\n"
 "I just hope, {name} knows what {mf|he|she}'s doing..."
 msgstr ""
-"눈부신 싸움 솜씨로 녹녹은 술에 취한 거인으로부터 고블린들을 지켜냈어요. 그러고는 늠름한 태도로 고블린들을 우리 "
+"눈부신 싸움 솜씨로 녹-녹은 술에 취한 거인으로부터 고블린들을 지켜냈어요. 그러고는 늠름한 태도로 고블린들을 우리 "
 "{mf|남작령|남작령|왕국|왕국}의 어엿한 일원으로 만들었죠.\n"
 "{name}도 다 생각이 있어서 놔두는 거면 좋을 텐데..."
 
@@ -2540,7 +2540,7 @@ msgid ""
 "the faith off all {name}'s subjects. But... I mean... Lamashtu? Really? No "
 "way!"
 msgstr ""
-"녹녹이 자기가 라마슈투의 사도라며 부하들이랑 도성 바깥에 사당 몇 개를 세웠어요. 득의양양하던 분위기는 겁먹은 경비병들이 사당들을 "
+"녹-녹이 자기가 라마슈투의 사도라며 부하들이랑 도성 바깥에 사당 몇 개를 세웠어요. 득의양양하던 분위기는 겁먹은 경비병들이 사당들을 "
 "철거하려 하자 식어버렸죠. 저나 사람들이나 이제 타인의 다양한 신앙을 수용하는 법을 배워야 할까봐요. 하지만 라마슈투라니, 말도 안 "
 "되잖아요!"
 
@@ -2559,7 +2559,7 @@ msgid ""
 "ready to trust him watching my back in fights, knowing that he'll be there "
 "when we need him."
 msgstr ""
-"예전 고블린 왕의 모습으로 사납게 덤벼든 바게스트를 쓰러뜨리고, 녹녹도 자기한테 맞는 영웅의 길을 찾은 것 같아요. 여태껏 추구했던 길이 "
+"예전 고블린 왕의 모습으로 사납게 덤벼든 바게스트를 쓰러뜨리고, 녹-녹도 자기한테 맞는 영웅의 길을 찾은 것 같아요. 여태껏 추구했던 길이 "
 "아니라, 바로 {name}과 {mf|그의|그녀의} 왕국을 돕는 길 말이죠. 하는 짓은 예전이랑 비슷하지만 그래도 나름 철이 들었다고 "
 "해줘야겠네요. 든든한 친구로 거듭났으니 이제 제 등 뒤를 믿고 맡겨봐도 되겠어요."
 
@@ -4835,7 +4835,7 @@ msgid ""
 "heroes, he simply never gave up, struggling on and meeting the challenge of "
 "each new day with a spirit that no mishap or misfortune could ever quell."
 msgstr ""
-"녹 녹 — 미안해요, 그러니까 \"{d|Nok Hero}영웅{/d}\" 녹녹은 도둑맞은 땅에서 의심의 여지가 없는 영웅적 행보를 "
+"녹-녹 — 미안해요, 그러니까 \"{d|Nok Hero}영웅{/d}\" 녹-녹은 도둑맞은 땅에서 의심의 여지가 없는 영웅적 행보를 "
 "거듭해왔어요. 어떤 곤경에 처하든, 어떤 위험에 빠지든, 그는 항상 전보다 조금이라도 나아지는 모습을 보여줬죠. 진정한 영웅들이 그렇듯, "
 "그냥 포기하는 법이 없이 어떤 역경이나 불운도 꺾을 수 없는 정신으로 매일 매일 새로운 도전에 맞서 싸웠답니다."
 
@@ -5318,10 +5318,10 @@ msgid ""
 "with some new tale of adventure, one that will surely make you smile, "
 "whether our foolhardy, clumsy, well-intentioned goblin means to or not."
 msgstr ""
-"녹 녹, 미안해요. 그러니까 \"{d|Nok Jester}광대{/d}\" 녹 녹은 왕국에서 왕실 안팎으로 큰 웃음의 원천이 되었어요. "
+"녹-녹, 미안해요. 그러니까 \"{d|Nok Jester}광대{/d}\" 녹-녹은 왕국에서 왕실 안팎으로 큰 웃음의 원천이 되었어요. "
 "어떨 때는 아주 자처를 하더라고요.\n"
 "그의 익살스러운 행동이 시민들에게 기쁨과 즐거움을 주면서 왕국의 고블린을 대하는 시선을 누그러뜨렸어요. 한때는 도시 거리에서 환영받기까지 "
-"했죠. 그가 꿈꾸던 \"영웅\"이 되지는 못했지만, 녹 녹은 그의 {mf|왕|여왕} 덕분에 자아와 재능을 발견했어요. 만약 여러분이 "
+"했죠. 그가 꿈꾸던 \"영웅\"이 되지는 못했지만, 녹-녹은 그의 {mf|왕|여왕} 덕분에 자아와 재능을 발견했어요. 만약 여러분이 "
 "왕국에 오시면, 그를 꼭 찾아보세요. 우리의 단순하고, 어설프고, 착한 고블린은 일부러든 아니든 여러분을 웃게 만들 새로운 모험 이야기를 "
 "기꺼이 들려줄 테니까요."
 
@@ -5334,7 +5334,7 @@ msgid ""
 "say... it accurately reflects the size in spirit of the goblin hero who'd "
 "been nurtured by the teachings of his {mf|king|queen}."
 msgstr ""
-"그... 약간 부정확한... 녹녹과 {mf|왕|여왕}의 {d|Nok Statue Ok}조각상{/d}은 지금도 광장에 나란히 서있습니다. "
+"그... 약간 부정확한... 녹-녹과 {mf|왕|여왕}의 {d|Nok Statue Ok}조각상{/d}은 지금도 광장에 나란히 서있습니다. "
 "저는 그걸 보면서 항상 이렇게 느꼈어요. 비록 키는 좀... 차이가 있지만, 그러니까... {mf|왕|여왕}의 가르침이 길러준 고블린 "
 "영웅의 정신적 크기를 정확하게 반영하고 있다고 말이죠."
 
