명칭 통일 및 오타 수정
- monster, 몬스터 -> 괴물
- warg -> 워그
- 괴물의 어머니 -> 괴물들의 어머니
- 씨았 -> 씨앗 오타 수정

--- a/ko/Classes.po
+++ b/ko/Classes.po
@@ -28183,8 +28183,8 @@ msgid ""
 msgstr ""
 "3 레벨과 이후 레벨이 2 오를 때마다 소서러는 혈통에서 유래한 주문을 추가로 얻습니다. 레벨을 올려 주문을 습득할 때 이 주문을 "
 "선택하지 않아도 주문책에 추가됩니다.\n"
-"시체 일으키기: 이 주문은 1d4+2개의 해골을 일으킵니다. 소환되는 몬스터는 시전자가 지정한 곳에 나타나며, 우선권 판정의 결과에 따라 "
-"행동합니다. 몬스터는 자기 능력을 최대한 활용해 적을 공격합니다."
+"시체 일으키기: 이 주문은 1d4+2개의 해골을 일으킵니다. 소환되는 괴물들은 시전자가 지정한 곳에 나타나며, 우선권 판정의 결과에 따라 "
+"행동합니다. 괴물들은 자기 능력을 최대한 활용해 적을 공격합니다."
 
 #. Mechanics/Blueprints/Classes/Sorcerer/UndeadBloodline/BloodlineUndeadSpellLevel5_DisplayName_String
 msgctxt "3d651697-deca-47af-b6c4-c163966a4078"
