--- a/ko/Root.po
+++ b/ko/Root.po
@@ -1049,7 +1049,7 @@ msgctxt "0536d3c6-f9b0-4e91-aec8-86de1bce1876"
 msgid ""
 "Nok-Nok sets several traps that will protect the camp from monsters, which "
 "will spring if an enemy attacks."
-msgstr "녹-녹은 적이 공격해오면 작동하는 함정을 몇개 설치하여 아영지를 보호합니다."
+msgstr "녹-녹은 괴물들이 공격해오면 작동하는 함정을 몇개 설치하여 아영지를 보호합니다."
 
 #. Mechanics/Blueprints/Root/CampingSpecial/NokNok_CampingSpecial_DisplayName_String
 msgctxt "e5d3bbc2-258a-49eb-a952-15581015d2de"
@@ -6836,7 +6836,7 @@ msgid ""
 "symbol is a three-eyed jackal head, which may be represented in many ways, "
 "and her sacred animal is the jackal."
 msgstr ""
-"\"괴물의 어머니\", \"광기의 여주인\" 그리고 \"악몽의 대모\"로도 알려진 라마슈투는 광기, 괴물, 악몽의 여신입니다. 그녀는 "
+"\"괴물들의 어머니\", \"광기의 여주인\" 그리고 \"악몽의 대모\"로도 알려진 라마슈투는 광기, 괴물, 악몽의 여신입니다. 그녀는 "
 "진정한 신성을 얻은 유일한 데몬 군주입니다. 골라리온의 지상이나 지하를 기어다니거나, 미끄러져 다니거나, 또는 펄럭이고 다니는 많은 "
 "기괴하고 기형적인 크리처들의 어머니이자 후원자입니다. 라마슈투의 성수는 자칼이며, 라마슈투의 부정한 상징은 여러 다양한 방식으로 묘사되곤 "
 "하는 세 개의 눈을 가진 자칼 머리입니다."
@@ -10243,7 +10243,7 @@ msgstr "로바"
 msgctxt "c6d6a9a4-0ce8-414a-8518-9958927577de"
 msgid ""
 "The tenth month of the year, named for Lamashtu, the goddess of monsters."
-msgstr "한 해의 열 번째 달로, 몬스터들의 여신인 라마슈투의 이름에서 유래되었습니다."
+msgstr "한 해의 열 번째 달로, 괴물들의 여신인 라마슈투의 이름에서 유래되었습니다."
 
 #. Mechanics/Blueprints/Root/Glossary Lore_Entries.Array.data[9].Name
 msgctxt "00f949f1-9ac4-4af5-81a2-8e78fb507324"
@@ -13759,7 +13759,7 @@ msgstr ""
 "도둑맞은 땅에서 가장 맑고 깨끗한 물의 원천인 실버스텝 호수는 수많은 자연 그대로의 개울이 흘러들어 동쪽의 가파른 바위산을 폭포처럼 타고 "
 "내려갑니다. 수십 개의 작은 폭포와 거품이 이는 폭포는 호수의 동쪽 기슭을 섬뜩하도록 아름답게 만들고, 갈대가 자라고 백합이 피는 섬 "
 "위에 오래된 버드나무가 이끼 낀 가지를 드리웁니다. 보석과 드래곤 실버의 전설에 이끌린 몇몇 나그네가 호수의 폭포들 뒤에 숨겨진 동굴을 "
-"발견했는데, 돌아온 사람들은 동굴이 레베니스 바위산맥 아래의 깊은 곳과 연결되어 있고, 동굴 속에 몬스터의 유해가 안치되어 있으며, "
+"발견했는데, 돌아온 사람들은 동굴이 레베니스 바위산맥 아래의 깊은 곳과 연결되어 있고, 동굴 속에 괴이한 납골당과, "
 "이상한 눈이 빛나고 있었다고 말했습니다. 하지만 대부분은 다시 볼 수 없었습니다."
 
 #. Mechanics/Blueprints/Root/Glossary_Entries.Array.data[85].Name
@@ -14282,7 +14282,7 @@ msgid ""
 "he gains experience points. These points accumulate over time, and when they "
 "reach or surpass a specific value, the character gains a level."
 msgstr ""
-"캐릭터가 도전을 극복하거나 몬스터를 물리치거나 퀘스트를 달성하면 경험치를 얻습니다. 이렇게 축적된 경험치가 일정 수치 이상이 되면 "
+"캐릭터가 도전을 극복하거나 괴물을 물리치거나 퀘스트를 달성하면 경험치를 얻습니다. 이렇게 축적된 경험치가 일정 수치 이상이 되면 "
 "캐릭터는 새로운 레벨을 얻습니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[104].Name
@@ -14597,7 +14597,7 @@ msgid ""
 "he or she gains experience points. These points accumulate over time, and "
 "when they reach or surpass a specific value, the character gains a level."
 msgstr ""
-"캐릭터가 도전을 극복하거나, 몬스터를 물리치거나, 퀘스트를 달성하면 경험치를 얻습니다. 이렇게 축적된 경험치가 특정 수치 이상이 되면 "
+"캐릭터가 도전을 극복하거나, 괴물을 물리치거나, 퀘스트를 달성하면 경험치를 얻습니다. 이렇게 축적된 경험치가 특정 수치 이상이 되면 "
 "캐릭터는 새로운 레벨을 얻습니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[17].Name_1
@@ -14801,7 +14801,7 @@ msgid ""
 "recall knowledge about dungeons or nature, skin the dead animals, avoid "
 "random encounters, and so on."
 msgstr ""
-"이 기술은 자연의 세계에 대한 캐릭터의 지식을 나타냅니다. 캐릭터의 전승 (자연) 기술은 사냥, 몬스터 식별, 던전이나 자연에 대한 지식 "
+"이 기술은 자연의 세계에 대한 캐릭터의 지식을 나타냅니다. 캐릭터의 전승 (자연) 기술은 사냥, 괴물 식별, 던전이나 자연에 대한 지식 "
 "떠올리기, 죽은 동물의 가죽 벗기기, 무작위 조우 회피에 사용됩니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[28].Name_1
@@ -14866,8 +14866,8 @@ msgid ""
 "useful to identify monsters (outsiders and undead), recall knowledge about "
 "the planes or religions, etc."
 msgstr ""
-"이 기술은 신의 비밀, 성스러운 전승, 다른 차원계에 대한 인물의 지식을 나타냅니다. 캐릭터의 전승 (종교) 기술은 몬스터 (외차원체 및 "
-"언데드)를 식별하고, 차원 또는 종교에 관한 지식을 떠올리는 데 유용합니다."
+"이 기술은 신의 비밀, 성스러운 전승, 다른 차원계에 대한 인물의 지식을 나타냅니다. 캐릭터의 전승 (종교) 기술은 괴물 (외차원체 및 "
+"언데드)을 식별하고, 차원 또는 종교에 관한 지식을 떠올리는 데 유용합니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[30].Name_1
 msgctxt "c4eb1a0a-9770-4ad1-b654-e0b025f8372a"
@@ -14884,7 +14884,7 @@ msgid ""
 "scrolls, and recall knowledge (about arcana)."
 msgstr ""
 "이 기술은 주문, 마법 물품 및 수많은 마법 지식에 대한 캐릭터의 지식을 나타냅니다. 캐릭터의 지식 (비전) 기술을 사용하면 마법 물품과 "
-"몬스터를 (구조물, 용, 환수 등) 식별하고, 마법책과 스크롤을 통해 주문을 배우거나 빌릴 수 있으며, 비전에 관한 지식을 떠올릴 수 "
+"괴물 (구조물, 용, 환수 등)을 식별하고, 마법책과 스크롤을 통해 주문을 배우거나 빌릴 수 있으며, 비전에 관한 지식을 떠올릴 수 "
 "있습니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[31].Name_1
@@ -14937,7 +14937,7 @@ msgid ""
 "recall knowledge about geography, history, people and places."
 msgstr ""
 "이 기술은 문명을 운영하는 체계, 오늘 날의 사회를 만든 역사적 사건 등 사람에 대한 캐릭터의 지식을 나타냅니다. 캐릭터의 지식 (세계) "
-"기술을 사용하여 위조품을 만들거나 진품을 감정하고, 문자를 해독하며, 인간형 몬스터를 식별하고, 지리, 역사, 사람 및 장소에 대한 "
+"기술을 사용하여 위조품을 만들거나 진품을 감정하고, 문자를 해독하며, 괴물 (인간형)을 식별하고, 지리, 역사, 사람 및 장소에 대한 "
 "지식을 떠올릴 수 있습니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[34].Name_1
@@ -15603,7 +15603,7 @@ msgid ""
 "he goes up in level, granting him new powers and abilities."
 msgstr ""
 "캐릭터의 클래스는 파이터 또는 위저드와 같은 직업을 나타냅니다. 새로운 캐릭터는 해당 클래스에서 1 레벨부터 시작합니다. 캐릭터가 "
-"몬스터를 물리치고 경험치를 (XP) 얻으면 레벨이 올라 새로운 힘과 능력을 부여받습니다."
+"괴물을 물리치고 경험치 (XP) 를 얻으면 레벨이 올라 새로운 힘과 능력을 부여받습니다."
 
 #. Mechanics/Blueprints/Root/MechanicTerms_Entries.Array.data[91].Name
 msgctxt "1537db24-d6a3-4ecc-981f-986ac9057a05"
