--- a/ko/World.po
+++ b/ko/World.po
@@ -4398,7 +4398,7 @@ msgid ""
 "needy the blessing of the Mother of Monsters."
 msgstr ""
 "라마슈투의 사제 산나는 {mf|왕|여왕}의 곁에 오래 머물지 않았어요. 어느 날 밤, 그녀는 성에서 사라져 왕국의 국경으로 떠났죠. "
-"그리고 어려움에 처한 모든 사람들을 위해 말씀을 전하고, 괴물의 어머니의 축복을 베풀었답니다."
+"그리고 어려움에 처한 모든 사람들을 위해 말씀을 전하고, 괴물들의 어머니의 축복을 베풀었답니다."
 
 #. Mechanics/Blueprints/World/Epilogues/Cue_0167_Text
 msgctxt "de4bc8ef-d018-4f45-8834-955cb0e5cae7"
