--- a/ko/Kingdom.po
+++ b/ko/Kingdom.po
@@ -21334,7 +21334,7 @@ msgid ""
 "Stolen Lands."
 msgstr ""
 "정착민들의 짐마차가 이 지역에 들어왔습니다. 이들은 더 나은 삶을 꿈꾸며, 새로운 보금자리를 찾고 있습니다. 어쩌면 그들은 이 "
-"Stolen Lands에서 행복을 찾을 수 있을 것입니다."
+"도둑맞은 땅에서 행복을 찾을 수 있을 것입니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck2/Colonists_LocalizedName
 msgctxt "d509285d-2f9e-455b-82bf-bc8e64d73a26"
