--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -20384,45 +20384,45 @@ msgid ""
 "consists of a wild hunt monarch, wild hunt scout, and wild hunt archers."
 msgstr ""
 "와일드 헌트는 경외심을 불러일으키는 페이의 모임으로써, 그들은 세상 가운데에서 선택한 사냥감을 추구합니다. 이 기묘한 존재들을 살짝 볼 "
-"수 있었던 얼마 안 되는 자들은 살아서 이야기를 남겼습니다. 괴기한 사냥개들로 가득한 녹색 안개의 구름들, 비인간적인 정확성으로 마법의 "
-"시위를 발사하는 궁수들, 수 마일의 지평선을 가로질러 들리는 선율이 있는 뿔나팔 소리가 그것이었습니다.\n"
-"몇몇은 와일드 헌트가 단순한 전설 혹은 복수심에 불타는 영혼의 무리에 불과하다고 믿습니다. 그럼에도, 와일드 헌트의 기수들은 존재하며, "
+"수 있었던 얼마 안 되는 자들은 살아서 이야기를 남겼습니다. 괴기한 사냥개들로 가득한 녹색 안개의 구름, 비인간적인 정확성으로 마법의 "
+"시위를 발사하는 궁수들, 수 마일의 지평선을 가로질러 들리는 선율이 있는 뿔 나팔 소리가 그것이었습니다.\n"
+"몇몇은 와일드 헌트가 단순한 전설 혹은 복수심에 불타는 영혼의 무리에 불과하다고 믿습니다. 그런데도, 와일드 헌트의 기수들은 존재하며, "
 "실제로 강력한 페이들입니다. 셀 수 없을 만큼 많은 이 페이의 구성원들은 와일드 헌트를 구성합니다. “와일드 헌트”는 종족 전체를 의미할 "
 "뿐만 아니라, 그들의 목표를 추구하는 페이의 개별적인 집단을 의미합니다.\n"
-"와일드 헌트의 모든 페이들은 오로지 뿔 달린 왕(Horned King)이라 불리는 전설적인 지도자를 섬깁니다. 뿔 달린 왕의 기원은 "
+"와일드 헌트의 모든 페이는 오로지 뿔 달린 왕(Horned King)이라 불리는 전설적인 지도자를 섬깁니다. 뿔 달린 왕의 기원은 "
 "불분명하지만, 그와 같은 강력한 추종자들을 부리는 능력은 이 페이의 군주가 반신에 필적하는 힘을 가짐을 시사합니다. 아니면 실제로 신격을 "
-"가지고 있을지도 모릅니다. 뿔 달린 왕이 부르면, 몇몇의 와일드 헌트들은 한 지역에 모여 전설적인 적에 맞서기 위해 말을 타고 출발합니다."
+"가지고 있을지도 모릅니다. 뿔 달린 왕이 부르면, 몇몇 와일드 헌트들은 한 지역에 모여 전설적인 적에 맞서기 위해 말을 타고 출발합니다."
 "\n"
 "은둔적인 페이의 신성한 대리인의 역할을 수행하기 때문에, 와일드 헌트의 멤버들은 때때로 테인(Tane)이라 알려진 강력한 실체들로 "
 "분류됩니다. 이 이론에 따르면, 와일드 헌트의 페이는 새 차원으로 그들을 즉시 보낼 수 있는 테인의 능력을 공유하고 있습니다. 그러나 "
 "와일드 헌트와 테인의 관계는 훨씬 복잡합니다. 테인이 와일드 헌트의 목표물이 될 때가 있기도 하지만, 다른 한 측면에서는, 와일드 헌트 "
 "대장들은 테인의 일시적인 도움을 얻기 위해 흥정하기도 합니다.\n"
-"그러나 뿔 달린 왕의 부름은 드문 일입니다. 와일드 헌트들은 일반적으로 그들 자시에게 지시합니다. 각각의 와일드 헌트는 한 명의 와일드 "
+"그러나 뿔 달린 왕의 부름은 드문 일입니다. 와일드 헌트들은 일반적으로 그들 자신에게 지시합니다. 각각의 와일드 헌트는 한 명의 와일드 "
 "헌트 군주를 따릅니다. 와일드 헌트 군주는 새로운 사냥터를 찾기 위해 힘들이지 않고 페이의 영역과 물질 차원의 경계를 넘나듭니다. 많은 "
 "경우 임무들은 와일드 헌트가 모은 소문들에 의해 결정됩니다. 와일드 헌트들은 때때로 그들을 찾아 나설 정도로 용감하고 지식이 있는 드문 "
 "이들의 제안을 고려하기도 합니다. 그들은 오로지 가치에 근거해서 임무를 수락합니다. 그들이 제시하는 비용은 그들이 하는 일에 따라 "
-"천차만별로 달라집니다. 그럼에도 그들은 물질적인 부에는 관심이 없습니다. 와일드 헌트 군주들은 불리한 거래를 심각한 공격으로 "
+"천차만별로 달라집니다. 그런데도 그들은 물질적인 부에는 관심이 없습니다. 와일드 헌트 군주들은 불리한 거래를 심각한 공격으로 "
 "받아들입니다. 와일드 헌트를 속이려고 하거나 가담한 자들은 분노한 페이들의 다음의 목표가 되고는 합니다.\n"
 "와일드 헌트의 구성원들은 보통 페이의 원시 고향 출신들입니다. 그러나 그들은 사냥터를 찾기 위해 주기적으로 물질 차원으로 여행을 "
-"떠납니다. 와일드 헌트의 개인적인 이유들은 다양합니다. 기술의 시험 혹은 자랑에서부터 복수의 임무, 심지어는 와일드 헌트의 숫자를 늘리기 "
+"떠납니다. 와일드 헌트의 개인적인 이유는 다양합니다. 기술의 시험 혹은 자랑에서부터 복수의 임무, 심지어는 와일드 헌트의 숫자를 늘리기 "
 "위한 것까지 있습니다.\n"
 "와일드 헌트가 추격의 긴장을 원할 때, 그들은 어려운 사냥터나 의도적으로 그들 자신에게 복잡한 제한을 부과합니다. 이는 임무의 난이도를 "
-"어렵게 합니다. 그들은 적어도 첫번째 시도로 그들의 목표를 살해하는 것을 피하려고 합니다. 그러나 그들의 사냥터가 지혜의 싸움을 거부하고 "
+"어렵게 합니다. 그들은 적어도 첫 번째 시도로 그들의 목표를 살해하는 것을 피하려고 합니다. 그러나 그들의 사냥터가 지혜의 싸움을 거부하고 "
 "특별하게 치명적인 전술을 요구한다면, 그들은 이에 답합니다. 무엇보다도, 필멸자가 친절한 경쟁을 인식할 수 없을 정도로 우둔하다면, 그를 "
-"죽게 만든 것은 와일드 헌트의 사냥 아니라 그의 무지일 것입니다.\n"
+"죽게 만든 것은 와일드 헌트의 사냥이 아니라 그의 무지일 것입니다.\n"
 "와일드 헌트는 사냥감을 죽이기 위해 고군분투합니다. 이 역할에서, 구성원들은 암살자처럼 행동합니다. 다른 한편으로는, 만약 그들이 "
 "사냥감이 재생하기를 시도한다고 생각된다면, 시체가 먼지로 변하기 전에 그들은 유해를 다른 차원으로 보냅니다. 그럼으로써 사냥감의 생명은 "
 "되돌아옵니다. 와일드 헌트의 행동은 예측할 수 없습니다. 그들은 즐거운 해체를 하기도 분노의 피바람을 부르기도 합니다. 와일드 헌트가 "
-"두번째로 쫓는 사냥감은 죽음보다 훨씬 고귀한 운명을 맞이합니다. 예를 들어, 몇몇의 와일드 헌트 군주는 그들을 가장 짜증나게 했던 동물을 "
+"두 번째로 쫓는 사냥감은 죽음보다 훨씬 고귀한 운명을 맞이합니다. 예를 들어, 몇몇 와일드 헌트 군주는 그들을 가장 짜증 나게 했던 동물을 "
 "위해 작은 동물원을 만듭니다. 다른 군주들은 부활의 범주를 넘어선 것처럼, 흔적을 남기지 않고 사라집니다.\n"
 "와일드 헌트가 출발하는 이유 중에 가장 드문 것은 그 계급에 맞는 새로운 헌터를 찾는 일입니다. 와일드 헌트의 대다수의 구성원은 페이의 "
-"영역에서 기원을 두고 있습니다. 하지만 몇몇의 구성원은 와일드 헌트의 관심에서 벗어나는 데 실패한 운명적인 날을 되짚어 보게 됩니다. "
+"영역에서 기원을 두고 있습니다. 하지만 몇몇 구성원은 와일드 헌트의 관심에서 벗어나는 데 실패한 운명적인 날을 되짚어 보게 됩니다. "
 "와일드 헌트가 어떤 특정한, 와일드 헌트는 특별한 근력과 힘을 가지지 않은 필멸자를 거의 쫓지 않지만, 필멸자를 찾아 나서는 이유는 "
-"신비로 싸여 있습니다. 긴 시간의 추격 끝에, 와일드 헌트 군주는 의식의 일환으로 사냥감을 벱니다. 이것은 다음날 아침 필멸자가 와일드 "
-"헌트의 새로운 구성원으로 각성함을 의미합니다. 필멸자가 와일드 헌트에 가입할 때, 약간의 성품은 남아있지만 그들의 전생의 기억은 "
+"신비로 싸여 있습니다. 긴 시간의 추격 끝에, 와일드 헌트 군주는 의식의 일환으로 사냥감을 벱니다. 이것은 다음 날 아침 필멸자가 와일드 "
+"헌트의 새로운 구성원으로 각성함을 의미합니다. 필멸자가 와일드 헌트에 가입할 때 약간의 성품은 남아있지만, 그들의 전생의 기억은 "
 "사라집니다. 와일드 헌트 군주가 어떤 필멸자의 재능과 능력에 특별히 감명받는다면, 그는 필멸자를 와일드 헌트의 특별한 구성원으로 "
 "변화시키면서 그 능력들을 보전하기를 선택할 수 있습니다. 이 특별한 헌터들은 그들 기억의 대부분이 남아있게 됩니다. 그들은 종종 그들의 "
-"오래된 친구와 가족과 함께 시간을 보내지만, 와일드 헌트 대장의 뿔나팔의 부름은 그들의 오래된 관계의 유지를 허구의 노력으로 바꿀 정도로 "
+"오래된 친구와 가족과 함께 시간을 보내지만, 와일드 헌트 대장의 뿔 나팔의 부름은 그들의 오래된 관계의 유지를 허구의 노력으로 바꿀 정도로 "
 "전생에 느낀 어떤 충성심보다 강합니다.\n"
 "와일드 헌트의 페이들은 세 유형으로 분류됩니다. 이 유형의 페이들을 맞닥뜨릴 때, 그들은 홀로 혹은 작은 모임으로 있을 수 있습니다. "
 "그러나 그들은 함께 모여 진정한 와일드 헌트가 되었을 때 가장 위험합니다. 와일드 헌트는 와일드 헌트 군주, 와일드 헌트 정찰병, 와일드 "
