--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -9451,14 +9451,14 @@ msgid ""
 "nothing more than the sort of tall tale that is typical of excitable rural "
 "folk. A male hodag measures 10 feet long and weighs 700 pounds."
 msgstr ""
-"온몸이 파충류 비늘로 덮여있고 못처럼 튀어나와있는 황소처럼 탄탄한 몸매의 호닥(Hodag)은 문명 주변의 빽빽한 숲 사이에서 사냥을 하는 "
+"온몸이 파충류 비늘로 덮여있고 못처럼 튀어나와 있는 황소처럼 탄탄한 몸매의 호닥은 문명 주변의 빽빽한 숲 사이에서 사냥하는 "
 "전설적인 숲의 포식자입니다. 녹색, 회색 그리고 검은색 가죽으로 덮여있어 덤불 가운데에서 잘 눈에 띄지 않으며 뾰족한 못처럼 튀어나온 "
-"등과 위협적인 강력한 꼬리를 지니고 있습니다. 벌목꾼들 사이에서 내려오는 소문에 따르면 깊은 숲의 가장 어두운 곳에서 호닥의 붉게 빛나는 "
+"등과 위협적이고 강력한 꼬리를 지니고 있습니다. 벌목꾼들 사이에서 내려오는 소문에 따르면 깊은 숲의 가장 어두운 곳에서 호닥의 붉게 빛나는 "
 "눈을 보았다고 하며 눈과 얼음으로 덮인 지역에선 겨울에 호닥의 비늘 사이에서 자란 갈색 털에서 풍겨오는 기름진 악취를 맡을 수 있다고 "
 "합니다.\n"
-"많은 사람들이 호닥은 단순히 강력한 괴수가 아닌, 특정 숲에서 수년간 서식하며 사냥해온 고유하고 실제적인 공포라고 믿습니다. 그러나 "
+"많은 사람이 호닥은 단순히 강력한 괴수가 아닌, 특정 숲에서 수년간 서식하며 사냥해 온 고유하고 실제적인 공포라고 믿습니다. 그러나 "
 "황무지에 사는 다른 사람들은 호닥을 전통적인 시골 사람들 사이에서나 전해져온 신화 같은 이야기 정도로만 여깁니다. 수컷 호닥의 경우, "
-"길이는 약 10피트(약3m), 무게는 700파운드(약320kg)입니다."
+"길이는 약 10피트(약 3m), 무게는 700파운드(약 320kg)입니다."
 
 #. Mechanics/Blueprints/Encyclopedia/Hodag_Title_String
 msgctxt "644f76ff-d958-4849-b176-15543478ed6c"
@@ -9473,7 +9473,7 @@ msgid ""
 "and weight, all the way from the miniature pony to the great war destriers "
 "found in cavalry companies."
 msgstr ""
-"말은 골라리온 전역에서 가축화된 말과 비슷한 4족 동물의 통칭입니다. 그들의 크기와 무게는 작은 조랑말부터 기병대에서 볼 수 있는 대형 "
+"말은 골라리온 전역에서 가축화된 말과 비슷한 사족동물의 통칭입니다. 그들의 크기와 무게는 작은 조랑말부터 기병대에서 볼 수 있는 대형 "
 "군마까지 매우 다양합니다."
 
 #. Mechanics/Blueprints/Encyclopedia/Horse_Title_String
