--- a/ko/Kingdom.po
+++ b/ko/Kingdom.po
@@ -21898,14 +21898,14 @@ msgctxt "fc4edeb1-90ff-415f-a9b7-0bf9d1dcc5c0"
 msgid ""
 "The General successfully convinced the peasants to joining the ranks. "
 "They've already started training."
-msgstr "장군은 성공적으로 농민들을 군에 소속되도록 설득했습니다. 그들의 훈련이 이미 시작되었습니다."
+msgstr "장군은 농민들을 성공적으로 설득하여 군대에 합류하게 했습니다. 그들은 이미 훈련을 시작했습니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/FreeSwords_Solutions.Entries.Array.data[2].Resolutions.Array.data[3].LocalizedDescription
 msgctxt "caa3c1f1-e4f1-4878-a647-1cceb1b95461"
 msgid ""
 "The peasants accepted the General's invitation, and they've already begun "
 "training. Our people's patriotism only grows."
-msgstr "농민들은 장군의 초청을 받아들였으며, 이미 그들은 훈련을 시작하였습니다. 우리의 인민들의 애국심이 성장합니다."
+msgstr "농민들은 장군의 초대를 받아들여 이미 훈련에 들어갔습니다. 우리 백성들의 애국심은 점점 커지고 있습니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_AF_G_String
 msgctxt "96489c2f-2935-4d8c-86a9-456f0323b470"
@@ -21913,8 +21913,8 @@ msgid ""
 "The advisor's agents could not persuade the peasants to end their rebellion. "
 "The affected area is growing. Perhaps stricter measures are in order."
 msgstr ""
-"보좌관의 요원들은 농민들이 그들의 반란을 멈추도록 설득할 수 없었다. 반란의 영향을 받는 지역이 점점 넓어지고 있다. 아마 더 엄격한 "
-"조치가 필요할지도 모른다."
+"보좌관의 요원들은 농민들에게 반란을 끝내도록 설득할 수 없었습니다. 피해 지역이 점점 커지고 있습니다. 더 엄격한 "
+"조치가 필요할지도 모릅니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_AF_NE_String
 msgctxt "dceb1527-7761-4e5e-a042-5041cbddd1f2"
@@ -21923,8 +21923,8 @@ msgid ""
 "fled into the forests, where they continue to mount their struggle against "
 "the authorities."
 msgstr ""
-"보좌관의 하인들은 농민들을 제압하기 위해 밖으로 나갔다. 그들은 숲 속으로 도망쳤고, 그곳에서 그들은 본국에 대항하여 투쟁을 이어나가고 "
-"있다."
+"보좌관의 하인들은 농민들을 복종시키기 위해 나섰습니다. 그들은 숲 속으로 도망쳤고, 그곳에서 그들은 당국에 대항하여 "
+"계속해서 투쟁을 벌였습니다"
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_GS_G_String
 msgctxt "db9ba723-d616-4f09-aa27-3ce01ec55f63"
@@ -21935,8 +21935,8 @@ msgid ""
 "filled with a desire to prove their loyalty and redeem themselves in the "
 "eyes of their {mf|baron|baroness|King|Queen}."
 msgstr ""
-"외국의 첩자가 그 반란의 아이디어를 퍼트렸다는 것이 보좌관의 조사로 밝혀졌습니다. 범인은 체포되었습니다. 사람들은 그들이 조종당했음을 "
-"알고는 그들의 하찮은 반란을 뉘우쳤습니다. 그들은 이제 충성심을 증명하고 {mf|남작|남작|왕|여왕}의 눈에 다시 들어오려는 열망으로 "
+"보좌관의 조사로 외국의 첩자가 그 반란의 아이디어를 퍼트렸다는 것이 밝혀졌고, 범인은 체포되었습니다. 사람들은 자신들이 속았다는 사실을 "
+"깨닫고 사소한 반란을 뉘우쳤습니다. 이제 그들은 자신의 충성심을 증명하고 {mf|남작|남작|왕|여왕}의 눈에서 자신을 구원하려는 열망으로 "
 "가득 차 있습니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_GS_NE_String
@@ -21958,8 +21958,8 @@ msgid ""
 "to the {mf|baron|baroness|King|Queen}. The state would collapse without its "
 "subjects."
 msgstr ""
-"한 마을이 우리 관리들을 무시하고 있습니다. 그들은 수사슴 군주 때처럼 자치를 원합니다. 만약 그들을 내버려 둔다면, 그 이웃들도 "
-"동참하고 {mf|남작|여남작|왕|여왕}에게는 충성하지 않을 것입니다. 백성 없는 나라는 멸망하고 말 것입니다."
+"마을 하나가 우리 관리들을 무시하고 있습니다. 그들은 수사슴 군주 때처럼 자치를 원합니다. 만약 그들을 내버려 둔다면, 그 이웃들도 "
+"동참하고 {mf|남작|여남작|왕|여왕}에게 충성하지 않을 것입니다. 백성 없는 나라는 멸망하고 말 것입니다."
 
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_LocalizedName
 #. Mechanics/Blueprints/Kingdom/Events/Decks/Extra 50/Deck3/Freethinkers_LocalizedName_String
