용어 통일, 맞춤법 및 어색한 표현 수정
- 쫒 -> 쫓
- Realm of the Mammoth Lords -> 매머드 군주의 영역
- Mammoth -> 매머드

--- a/ko/Encyclopedia.po
+++ b/ko/Encyclopedia.po
@@ -5595,7 +5595,7 @@ msgstr ""
 "알려져있습니다. 그들은 악하지 않고, 자연과의 상호 존중이나 공감을 보여주는 드루이드와 레인저들과 친하게 지낼 가능성이 높습니다.\n"
 " 드라이어드들은 나무를 지키는 상냥한 생명들입니다. 직접적인 폭력을 행사하는 경우는 드물지만, 그들 거처의 위협 요소를 함정에 빠뜨리고 "
 "무력화 시키거나 적들을 아군으로 만들 수 있습니다. 몇몇 드라이어드들은 그들의 영역에 하나나 그 이상의 매혹된 인간형 개체들을 부리며 "
-"공격자들을 물리치거나 멀리 떨어지도록 만듭니다. 무력화된 적들은 보통 드라이어드의 아군에 의해 숲의 끝자락으로 보내져 쫒겨나지만, "
+"공격자들을 물리치거나 멀리 떨어지도록 만듭니다. 무력화된 적들은 보통 드라이어드의 아군에 의해 숲의 끝자락으로 보내져 쫓겨나지만, "
 "사악하거나 명백히 적대적인 개체들은 전투나 끝나면 죽이기도 합니다."
 
 #. Mechanics/Blueprints/Encyclopedia/Dryad_Title_String
@@ -7608,7 +7608,7 @@ msgstr ""
 "<b>사회:</b>\n"
 "폭력적이면서 다산합니다. 권력이 머무르지 않는 원시적인 형태의 부족 속에서 살아갑니다. 고블린이 농사짓거나 수렵, 채집하여 자급자족하는 "
 "것은 드물고, 주로 식량이 풍부하거나 훔칠만한 곳 근처에서 살아갑니다. 그들은 중요한 요새같은 건물도 짓지 못하고 접근이 쉬운 장소에서 "
-"쫒겨나, 불쾌하고 외딴 지역에서 삽니다. 형편없는 건축, 정착 기술은 조잡한 동굴, 쓰러질 듯한 마을 그리고 버려진 건물에서 살아가도록 "
+"쫓겨나, 불쾌하고 외딴 지역에서 삽니다. 형편없는 건축, 정착 기술은 조잡한 동굴, 쓰러질 듯한 마을 그리고 버려진 건물에서 살아가도록 "
 "강제합니다. 도구를 다루거나 농사짓는데 능한 고블린은 거의 없고 희귀한 물품들은 주로 인간이나 다른 문명화된 종족이 버린 물건입니다. "
 "고블린의 식욕과 형편없는 계획성은 강한 전사가 작은 부족을 지배하도록 만듭니다. 가장 강한 고블린 족장도 그들의 생존이 식량원을 확보하기 "
 "위한 빈번한 습격과 공격적인 신생 부족을 처단하는 것에 달렸음을 빠르게 눈치챕니다. 고블린의 수컷과 암컷 모두 못생기고 사악하며 부족의 "
@@ -15552,7 +15552,7 @@ msgid ""
 "At 10th level, he adds Pinpoint Targeting and Shot on the Run to the list."
 msgstr ""
 "사냥의 긴장감을 즐기는 이들에게, 세상에는 오직 사냥꾼과 사냥감만이 있을 뿐입니다. 스스로 스카웃, 트래커, 바운티헌터, 레인저가 되는 "
-"이들에게는 꽤 많은 공통점이 있습니다: 독특한 무기술, 가장 재빠른 대상조차 쫒을 수 있는 추적 기술, 그리고 표적을 원거리에서 맞출 수 "
+"이들에게는 꽤 많은 공통점이 있습니다: 독특한 무기술, 가장 재빠른 대상조차 쫓을 수 있는 추적 기술, 그리고 표적을 원거리에서 맞출 수 "
 "있는 전문 기술이 그 공통점들입니다. 지식이 많고, 인내심있으며 숙련된 사냥꾼으로서, 레인저들은 인간, 동물, 괴물을 가리지 않고 "
 "추적하면서 사냥꾼으로서 다가가는 방법, 다양한 환경에 적응하는법, 그리고 더 치명적인 전투 기술을 에 대한 통찰을 얻습니다. 어떤 이들은 "
 "개척자들을 지키기 위해 사람을 먹는 괴물을 추격하고, 다른 이들은 더 지능적인 사냥를 추구합니다 — 주변에서 도망자들을 찾는 일이지요.\n"
@@ -20290,7 +20290,7 @@ msgstr ""
 "일도 아닙니다. 선한 늑대인간이 없는 것은 아니지만 극히 소수에 불과하며, 대부분의 늑대인간들은 사냥과 피가 흐르는 날고기의 맛을 즐기는 "
 "사악한 살인자들입니다.\n"
 "늑대인간 역시 늑대와 같이 무리짓는 동물로, 동족들, 즉 낮에는 인간, 밤에는 야수들과 집단을 이루며 거주하는 것으로 알려져 있습니다. "
-"늑대인간 마을은 비밀을 지키기 위해 보통은 해가 저물기 전에 방문객들을 쫒아냅니다. 물론 늑대인간 무리가 그 불운한 방문객에게 딱히 "
+"늑대인간 마을은 비밀을 지키기 위해 보통은 해가 저물기 전에 방문객들을 쫓아냅니다. 물론 늑대인간 무리가 그 불운한 방문객에게 딱히 "
 "행방을 궁금해하거나 복수를 다짐할만한 친구가 없는 것으로 판단했다면 경우가 다르겠지만 말입니다."
 
 #. Mechanics/Blueprints/Encyclopedia/Werewolf_Title_String
