--- a/ko/Quests.po
+++ b/ko/Quests.po
@@ -7752,7 +7752,7 @@ msgid ""
 msgstr ""
 "우리 모두 각자의 이유가 있어 도둑맞은 땅에 왔습니다. 누군간 새로운 미래를 찾아서, 누군간 과거로부터 달아나기 위해서. 아미리는 과거에 "
 "삶과 일에 대해 얘기하는 걸 좋아하지 않습니다. 아미리는 멍청하고 고집센 족장이 여자가 전사의 길을 택하는 걸 허락하지 않았기에 부족에서 "
-"쫒겨났습니다. 그렇게 부족을 떠난 후, 아미리는 검을 휘두를 자격을 증명해왔지만 - 뒤에 남겨둔 가족들은 그녀에게 깊은 상처로 남아있는 "
+"쫓겨났습니다. 그렇게 부족을 떠난 후, 아미리는 검을 휘두를 자격을 증명해왔지만 - 뒤에 남겨둔 가족들은 그녀에게 깊은 상처로 남아있는 "
 "모양입니다..."
 
 #. Mechanics/Blueprints/World/Quests/Companions/Amiri/Q2_Pariah/Amiri_Q2_Pariah_Title
@@ -7786,7 +7786,7 @@ msgid ""
 "former tribe cross all of Numeria? What do they seek in the Stolen Lands? We "
 "should find out!"
 msgstr ""
-"켈리드 바바리안들은 주로 맘모스 군주 왕국의 눈덮인 산들에서 떠돌아다니지 그 바깥 영역으로는 대개 벗어나지 않습니다. 무엇이 아미리의 전 "
+"켈리드 바바리안들은 주로 매머드 군주의 영역에 있는 눈 덮인 산들에서 떠돌아다니지 그 바깥 영역으로는 대개 벗어나지 않습니다. 무엇이 아미리의 전 "
 "부족으로 하여금 누메리아 땅을 가로지르게 했을까요? 도둑맞은 땅에서 무엇을 원하는 걸까요? 그걸 알아내야합니다!"
 
 #. Mechanics/Blueprints/World/Quests/Companions/Amiri/Q2_Pariah/Obj_2_MitSixBears_Title
